# syres

./: Cargo.toml  LICENSE  README.md  shell.nix
assets/payloads/: POST-bookings.txt
examples/: test_http.rs
src/: app.rs  event.rs  http_client.rs  main.rs  skedda.rs  skedda_client.rs  ui.rs
