cargo-features = ["edition2024"]

[package]
name = "syres"
version = "0.1.0"
description = "Make reservations at Switchyards"
authors = ["Jimmy Alford <jimmy.alford316@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
scraper = "0.18"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
